Se agregaron estilos en el index y se crearon los modelos, ahora esta pendiente continuar con la vista de Signup

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,105 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    {{!-- <a class="navbar-brand" href="#">Pawtopia</a> --}}
+     <a class="navbar-brand" href="#">
+      <img src="/aqui va el logo" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      Pawtopia
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+         <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Profile
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Login</a></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Products
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Cats</a></li>
+            <li><a class="dropdown-item" href="#">Dogs</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Spa</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shops</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Signup</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+</div>
+
+<div class="cajaIndex">  
+<div class="banner">
+  <div>
+   <p>Welcome to Pawtopia</p>
+  </div>
+</div>
+</div>
+
+<div class="tarjetas">
+
+  <div>
+    <img src="/public/images/Post para Facebook de Recaudación de Fondos Animales Formas y Garabatos de Colores Morado y Amarillo.gif" alt="">
+  </div>
+
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://s2.qwant.com/thumbr/0x380/5/0/9c07df4cb6b9cf536a98fba44def97ef44badd694664c000325450c3dee95a/20194837.jpg?u=https%3A%2F%2Fplazavea.vteximg.com.br%2Farquivos%2Fids%2F321440-1000-1000%2F20194837.jpg%3Fv%3D637249310302200000&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://s1.qwant.com/thumbr/0x380/8/e/241f918927f46bf512f477ec72fb8ced6f16524f377dcf2bc43903cc642539/00070646002928L.jpg?u=https%3A%2F%2Fres.cloudinary.com%2Fwalmart-labs%2Fimage%2Fupload%2Fw_960%2Cdpr_auto%2Cf_auto%2Cq_auto%3Abest%2Fgr%2Fimages%2Fproduct-images%2Fimg_large%2F00070646002928L.jpg&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://s2.qwant.com/thumbr/0x380/7/f/b6c5ef3e439f8e67ce66b0dfcdb8f652db19c70dc54fbe9bdfa774dd84bf97/5e179274dec8c_000163883mjpg.jpg?u=https%3A%2F%2Fresources.claroshop.com%2Fmedios-plazavip%2Fmkt%2F5e179274dec8c_000163883mjpg.jpg&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://s2.qwant.com/thumbr/0x380/d/1/953cb795785e7f921728e2ee7d83d00a698e41cea3da2a42fae9f5ede3cb79/Alimento-Gatos-Felixsensaciones-Atun-Salsa-348588_a.jpg?u=https%3A%2F%2Fexitocol.vtexassets.com%2Farquivos%2Fids%2F2006906%2FAlimento-Gatos-Felixsensaciones-Atun-Salsa-348588_a.jpg%3Fv%3D637263802453100000&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
+
+
