--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,8 @@
 <div id="form">
+  <div class="headerSingup">
   <h2>Sign Up</h2>
-  <form action="/auth/signup" method="POST">
+  </div>
+  <form action="/auth/signup" method="POST" class="formSignup">
 
     <label> Username
       <input type="text" name="username" placeholder="Your username" />
