--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,49 +1,27 @@
-.footer{
-    background:#000;
-    padding:30px 0px;
-    font-family: 'Nunito', sans-serif;
-    text-align:center;
-    position: relative;
-    bottom: 0;
-    width: 100vw;
-    }
-    
-    .footer .row{
-    width:100%;
-    margin:1% 0%;
-    padding:0.6% 0%;
-    color:gray;
-    font-size:0.8em;
-    }
-    
-    .footer .row a{
-    text-decoration:none;
-    color:gray;
-    transition:0.5s;
-    }
-    
-    .footer .row a:hover{
-    color:#fff;
-    }
-    
-    .footer .row ul{
-    width:100%;
-    }
-    
-    .footer .row ul li{
-    display:inline-block;
-    margin:0px 30px;
-    }
-    
-    .footer .row a i{
-    font-size:2em;
-    margin:0% 1%;
-    }
-/* 
-    .row i {
-        display: inline-block;
-        width: 44px;
-        height: 44px;
-        margin-right: 10px;
-        text-align: center;
-      } */
+.footer-seccion{
+    padding: 1rem 0 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-image: url(../images/pawfondo.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 1rem;
+}
+.contenedor-footer{
+    padding-top: 15px;
+}
+.copyright{
+    color: black;
+    text-align: center;
+    padding: 16px;
+    margin: 15px;
+}
+footer{
+    padding: 30px;
+
+}
+h1{
+    text-align: center;
+}
