--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,39 +1,58 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
-}
-
-.cajaIndex{
+.header-inicio{
+  padding: 1rem 0 1rem 0;
   display: flex;
-  justify-content: center;
-  padding-top: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: url(../images/pawfondo.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 1rem;
 }
-div.banner{
+.barra {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 30px;
-  width: 80vw;
-  height: 30vh;
-  background-image: url("https://images.vexels.com/content/258137/preview/dog-breed-pets-doodle-pattern-design-bb89f6.png");
+  flex-direction: row;
+  justify-content: space-between;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 1rem;
+  }
+  .navegacion{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    
+  }
+.contenedor-seccion{
+  background-image: url(../images/fondoHeader.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  color: white;
-  font-size: 70px;
+  background-position: center center;
+  width: 100vw;
+  height: 35vh;
+  overflow: hidden;
+  display: block;
+ 
 }
-
-.tarjetas{
-  padding-top: 25px;
+.contenedor-header{
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 10px 10px;
+  flex-direction: column;
+  margin-top: 15px;
+}
+h1{
+  margin-top: 0px;
+  text-align: center;
+ padding-top: 95px;
+ font-family: 'Comfortaa', sans-serif;
+ font-weight: 150;
+ font-size: 50px;
+ 
 }
 
-.card{
-margin: 0px 30px;
-box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+a{
+  display: flex;
+  align-items: center;
+  margin-right: 10px; 
 }
