--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,105 +1,91 @@
-<div>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    {{!-- <a class="navbar-brand" href="#">Pawtopia</a> --}}
-     <a class="navbar-brand" href="#">
-      <img src="/aqui va el logo" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      Pawtopia
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Profile
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pawtopia</title>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+   <link rel="stylesheet" type="text/css" href="/stylesheets/navegacion.css">
+</head>
+<body>
+  <header class="header-inicio">
+    <div class="contenedor-header">
+      <div class="barra">
+        {{!-- <img src="public/images/pawfondo.jpg" alt="Logo de Pawtopia"> --}}
+        </div>
+        <nav class="navegacion"> 
+          <a class="login" href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m10.998 16 5-4-5-4v3h-9v2h9z"></path><path d="M12.999 2.999a8.938 8.938 0 0 0-6.364 2.637L8.049 7.05c1.322-1.322 3.08-2.051 4.95-2.051s3.628.729 4.95 2.051S20 10.13 20 12s-.729 3.628-2.051 4.95-3.08 2.051-4.95 2.051-3.628-.729-4.95-2.051l-1.414 1.414c1.699 1.7 3.959 2.637 6.364 2.637s4.665-.937 6.364-2.637C21.063 16.665 22 14.405 22 12s-.937-4.665-2.637-6.364a8.938 8.938 0 0 0-6.364-2.637z"></path></svg>
+            Login
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Login</a></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Products
+          <a href="logout.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m2 12 5 4v-3h9v-2H7V8z"></path><path d="M13.001 2.999a8.938 8.938 0 0 0-6.364 2.637L8.051 7.05c1.322-1.322 3.08-2.051 4.95-2.051s3.628.729 4.95 2.051 2.051 3.08 2.051 4.95-.729 3.628-2.051 4.95-3.08 2.051-4.95 2.051-3.628-.729-4.95-2.051l-1.414 1.414c1.699 1.7 3.959 2.637 6.364 2.637s4.665-.937 6.364-2.637c1.7-1.699 2.637-3.959 2.637-6.364s-.937-4.665-2.637-6.364a8.938 8.938 0 0 0-6.364-2.637z"></path></svg>Logout
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Cats</a></li>
-            <li><a class="dropdown-item" href="#">Dogs</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Spa</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Shops</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Signup</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-</div>
-
-<div class="cajaIndex">  
-<div class="banner">
-  <div>
-   <p>Welcome to Pawtopia</p>
-  </div>
-</div>
-</div>
-
-<div class="tarjetas">
-
-  <div>
-    <img src="/public/images/Post para Facebook de Recaudación de Fondos Animales Formas y Garabatos de Colores Morado y Amarillo.gif" alt="">
-  </div>
-
-
-  <div class="card" style="width: 18rem;">
-    <img src="https://s2.qwant.com/thumbr/0x380/5/0/9c07df4cb6b9cf536a98fba44def97ef44badd694664c000325450c3dee95a/20194837.jpg?u=https%3A%2F%2Fplazavea.vteximg.com.br%2Farquivos%2Fids%2F321440-1000-1000%2F20194837.jpg%3Fv%3D637249310302200000&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+            <a href="cats.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M17 14a5 5 0 0 0 2.71-.81L20 13a3.16 3.16 0 0 0 .45-.37l.21-.2a4.48 4.48 0 0 0 .48-.58l.06-.08a4.28 4.28 0 0 0 .41-.76 1.57 1.57 0 0 0 .09-.23 4.21 4.21 0 0 0 .2-.63l.06-.25A5.5 5.5 0 0 0 22 9V2l-3 3h-4l-3-3v7a5 5 0 0 0 5 5zm2-7a1 1 0 1 1-1 1 1 1 0 0 1 1-1zm-4 0a1 1 0 1 1-1 1 1 1 0 0 1 1-1z"></path><path d="M11 22v-5H8v5H5V11.9a3.49 3.49 0 0 1-2.48-1.64A3.59 3.59 0 0 1 2 8.5 3.65 3.65 0 0 1 6 5a1.89 1.89 0 0 0 2-2 1 1 0 0 1 1-1 1 1 0 0 1 1 1 3.89 3.89 0 0 1-4 4C4.19 7 4 8.16 4 8.51S4.18 10 6 10h5.09A6 6 0 0 0 19 14.65V22h-3v-5h-2v5z"></path></svg>Cats</a>
+          <a href="dogs.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M21 6h-2l-1.27-1.27A2.49 2.49 0 0 0 16 4h-2.5A2.64 2.64 0 0 0 11 2v6.36a4.38 4.38 0 0 0 1.13 2.72 6.57 6.57 0 0 0 4.13 1.82l3.45-1.38a3 3 0 0 0 1.73-1.84L22 8.15a1.06 1.06 0 0 0 0-.31V7a1 1 0 0 0-1-1zm-5 2a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"></path><path d="M11.38 11.74A5.24 5.24 0 0 1 10.07 9H6a1.88 1.88 0 0 1-2-2 1 1 0 0 0-2 0 4.69 4.69 0 0 0 .48 2A3.58 3.58 0 0 0 4 10.53V22h3v-5h6v5h3v-8.13a7.35 7.35 0 0 1-4.62-2.13z"></path></svg>Dogs</a>
+            <a href="spa.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M21 10H7V7c0-1.103.897-2 2-2s2 .897 2 2h2c0-2.206-1.794-4-4-4S5 4.794 5 7v3H3a1 1 0 0 0-1 1v2c0 2.606 1.674 4.823 4 5.65V22h2v-3h8v3h2v-3.35c2.326-.827 4-3.044 4-5.65v-2a1 1 0 0 0-1-1zm-1 3c0 2.206-1.794 4-4 4H8c-2.206 0-4-1.794-4-4v-1h16v1z"></path></svg>Spa</a>
+        </nav>
+      </div>
+</header>
+  <main class="contenedor-seccion">
+   
+    <h1>Welcome To Pawtopia&#128062;</h1>
+  </main>
+{{!--  --}}
+<div class="card" style="width: 18rem;">
+    <img src="../public/images/croquetas1-1.webp" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title"></h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+     
     </div>
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="https://s1.qwant.com/thumbr/0x380/8/e/241f918927f46bf512f477ec72fb8ced6f16524f377dcf2bc43903cc642539/00070646002928L.jpg?u=https%3A%2F%2Fres.cloudinary.com%2Fwalmart-labs%2Fimage%2Fupload%2Fw_960%2Cdpr_auto%2Cf_auto%2Cq_auto%3Abest%2Fgr%2Fimages%2Fproduct-images%2Fimg_large%2F00070646002928L.jpg&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <img src="../public/images/croquetas1-4.webp" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Purina Proplan Perro</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+     
     </div>
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="https://s2.qwant.com/thumbr/0x380/7/f/b6c5ef3e439f8e67ce66b0dfcdb8f652db19c70dc54fbe9bdfa774dd84bf97/5e179274dec8c_000163883mjpg.jpg?u=https%3A%2F%2Fresources.claroshop.com%2Fmedios-plazavip%2Fmkt%2F5e179274dec8c_000163883mjpg.jpg&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+    <img src="../public/images/croquetas2-1.webp" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title"></h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+   
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="https://s2.qwant.com/thumbr/0x380/d/1/953cb795785e7f921728e2ee7d83d00a698e41cea3da2a42fae9f5ede3cb79/Alimento-Gatos-Felixsensaciones-Atun-Salsa-348588_a.jpg?u=https%3A%2F%2Fexitocol.vtexassets.com%2Farquivos%2Fids%2F2006906%2FAlimento-Gatos-Felixsensaciones-Atun-Salsa-348588_a.jpg%3Fv%3D637263802453100000&q=0&b=1&p=0&a=0" class="card-img-top" alt="...">
+  <div class='card' style="width: 18rem;">
+    <img src='../public/images/croquetas2-5.webp' class='card-img-top' alt=''>
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Royal Canin Gato</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      
     </div>
   </div>
-</div>
 
 
+{{!--  --}}
+  <footer class="footer-seccion">
+    <div class="contenedor-footer">
+          <nav class="navegacion"> 
+            <a href="contactus.html">Contact Us</a>
+            <a href="services.html">Our Services</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms & Conditions</a>
+            <a href="career.html">Career</a>
+
+          </nav>
+      </div>
+      </main>
+    <p class="copyright"> Todos los derechos Reservados 2023 &copy;</p>
+  </footer>
+ 
+</body>
+</html>
