--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,13 +3,10 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pawtopia</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-   <link rel="stylesheet" type="text/css" href="/stylesheets/navegacion.css">
 </head>
 <body>
   <header class="header-inicio">
@@ -33,59 +30,87 @@
    
     <h1>Welcome To Pawtopia&#128062;</h1>
   </main>
-{{!--  --}}
-<div class="card" style="width: 18rem;">
-    <img src="../public/images/croquetas1-1.webp" class="card-img-top" alt="...">
+
+{{!-- Seccion 1 tarjetas --}}
+<div class="titlesIndex">
+  <h3>Toys</h3>
+</div>
+
+<div class="tarjetas">
+  <div class="card" style="width: 18rem;" class="grid gap-0 row-gap-3">
+    <img src="https://www.petco.com.mx/medias/?context=bWFzdGVyfGltYWdlc3wzMzQwNTR8aW1hZ2UvanBlZ3xpbWFnZXMvaDA1L2g5My85MzIzMDI5NjU5Njc4LmpwZ3w4N2U5ZGIzOWQyN2JjMDVhNjE0N2NhZjg3MWRiMWIwMjc1MDUxMDAwMzA3YjJkMTc5MDMwMGY0OTk2MmE5MWJl" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"></h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-     
+      <h5 class="card-title">Kong Jugete</h5>
+      <p class="card-text">Kong Pelota de Goma Squeezz para Perro.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="https://www.petco.com.mx/medias/?context=bWFzdGVyfGltYWdlc3wzNzg2Mjl8aW1hZ2UvanBlZ3xpbWFnZXMvaDk1L2g2ZC85MzIyNzk2OTQxMzQyLmpwZ3xmZmQ0ZDA1NzY2YjQzMzk5M2M3NjYxMDM4YjljZGE3OTRlNmFhOTkyYjJjZDdiNDcwY2Q3MDkxMDcxOWFiYTdl" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Kong Puppy</h5>
+      <p class="card-text">Kong Panal de Caucho Clásico para Cachorros.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
     </div>
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="../public/images/croquetas1-4.webp" class="card-img-top" alt="...">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_aed9b49b-d31a-4a7b-ba3d-2c75a2b96fb7?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Purina Proplan Perro</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-     
+      <h5 class="card-title">Mail Carrier & Letter Cat Toy</h5>
+      <p class="card-text"> Perfect for your cat to pounce and chase.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
     </div>
   </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="../public/images/croquetas2-1.webp" class="card-img-top" alt="...">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_6478b794-dd18-426a-b8c9-b7706d855a09?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"></h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-   
+      <h5 class="card-title">Apple Catnip Cat Toy</h5>
+      <p class="card-text">100% stuffed with Yeowww! organically grown catnip..</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
+    </div>
+  </div>
+</div>
+
+{{!-- Seccion 2 tarjetas --}}
+
+  <div>
+   <h3 class="titlesIndex">Food</h3> 
+  </div>
+<div class="tarjetas">
+  <div class="card" style="width: 18rem;" class="grid gap-0 row-gap-3 column-gap-3">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_dac1e46d-7976-4347-9d2a-a10b8b08a0c5?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Kindfull Dry Food</h5>
+      <p class="card-text">Indoor Chicken and Brown Rice Recipe .</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_d0a5c63b-95fa-4bde-977a-aef5f51ff2f0?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Kindfull Pouch</h5>
+      <p class="card-text">Bone Broth Stew Wet Meal Topper.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
     </div>
   </div>
 
-  <div class='card' style="width: 18rem;">
-    <img src='../public/images/croquetas2-5.webp' class='card-img-top' alt=''>
+  <div class="card" style="width: 18rem;">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_7d40933f-6546-4bbf-9377-c0ab50aca6f5?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Royal Canin Gato</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      
+      <h5 class="card-title">Nutro Puppy Dry</h5>
+      <p class="card-text">Nutro Natural Choice Small Breed Adult Chicken.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
     </div>
   </div>
 
-
-{{!--  --}}
-  <footer class="footer-seccion">
-    <div class="contenedor-footer">
-          <nav class="navegacion"> 
-            <a href="contactus.html">Contact Us</a>
-            <a href="services.html">Our Services</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms & Conditions</a>
-            <a href="career.html">Career</a>
-
-          </nav>
-      </div>
-      </main>
-    <p class="copyright"> Todos los derechos Reservados 2023 &copy;</p>
-  </footer>
- 
-</body>
-</html>
+  <div class="card" style="width: 18rem;">
+    <img src="https://target.scene7.com/is/image/Target/GUEST_cefed502-c749-437d-8216-b9dcddb0fef8?wid=325&hei=325&qlt=80&fmt=pjpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Kindfull Can</h5>
+      <p class="card-text">Wet Dog Food - 12.5oz.</p>
+      <a href="#" class="btn btn-dark">Add to cart</a>
+    </div>
+  </div>
+</div>
