--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .header-inicio{
   padding: 1rem 0 1rem 0;
   display: flex;
@@ -8,6 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 1rem;
+  width: 100vw;
 }
 .barra {
   display: flex;
@@ -23,7 +30,7 @@
     align-items: center;
     text-align: center;
     font-size: 15px;
-    
+    text-decoration: none;
   }
 .contenedor-seccion{
   background-image: url(../images/fondoHeader.jpg);
@@ -41,6 +48,7 @@
   flex-direction: column;
   margin-top: 15px;
 }
+
 h1{
   margin-top: 0px;
   text-align: center;
@@ -51,8 +59,29 @@ h1{
  
 }
 
+.titlesIndex{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+h3{
+  font-size: 50px;
+}
+
 a{
   display: flex;
   align-items: center;
   margin-right: 10px; 
+  text-decoration: none;
 }
+
+.tarjetas{
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.card{
+  margin: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
