Ya se pueden crear eventos en calendario

--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -108,6 +108,11 @@ label.light {
   border-radius: 100%;
 }
 
+.spaceSignup{
+  margin-bottom: 200px;
+}
+
+
 @media screen and (min-width: 480px) {
 
   form {
