--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
   
 
 
-    <footer class="footer-seccion">
+    <footer class="footer-seccion spaceBotton">
       <div class="footerCompleto">
         <div class="contenedor-footer">
             <nav class="navegacion"> 
