--- a/public/stylesheets/navegacion.css
+++ b/public/stylesheets/navegacion.css
@@ -1,61 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+*,*:before, *:after{
+  box-sizing: inherit;
+}
+h1{
+  text-align: center;
+  margin-top: 50px;
+  font-size: 2rem;
+}
+.navegacion-principal {
+  background: rgb(235,185,240);
+background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 50%, rgba(237,165,236,1) 90%);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100vw;
+  height: 50vh;
+  font-family: 'Comfortaa', sans-serif;
+  text-decoration: none;
 }
 
-.header-inicio{
-    padding: 1rem 0 1rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-image: url(../images/pawfondo.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 1rem;
-    width: 100vw;
-  }
-  .barra {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-decoration: none;
-    text-align: center;
-    padding-top: 1rem;
-    }
-    .navegacion{
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      text-align: center;
-      font-size: 15px;
-      text-decoration: none;
-    }
+.contenedor-seccion{
+  display: flex;
+  background-image: url(../images/fondoHeader.jpg);
+  background-size: cover;
+  height: 35%;
+  position: relative;
+  align-items: center;
+  width: 100vw;
+  /* height: 35%;
+  width: 100%;
+  position: relative;
+  margin: 0 auto
+  */
+} 
+
+h1 {
+  text-align: center;
+  padding-top: 0px;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: bold;
+  font-size: 65px;
+}
+@media (max-with: 1140x){
   .contenedor-seccion{
-    background-image: url(../images/fondoHeader.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100vw;
     height: 35vh;
-    overflow: hidden;
-    display: block;
-   
+    max: width 1100px;
   }
-  .contenedor-header{
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-  }
-  
-  h1{
-    margin-top: 0px;
-    text-align: center;
-   padding-top: 95px;
-   font-family: 'Comfortaa', sans-serif;
-   font-weight: 150;
-   font-size: 50px;
-   
-  }
+}
