--- a/public/stylesheets/navegacion.css
+++ b/public/stylesheets/navegacion.css
@@ -7,11 +7,7 @@
 *,*:before, *:after{
   box-sizing: inherit;
 }
-h1{
-  text-align: center;
-  margin-top: 50px;
-  font-size: 2rem;
-}
+
 .navegacion-principal {
   background: rgb(235,185,240);
 background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 50%, rgba(237,165,236,1) 90%);
@@ -19,7 +15,7 @@ background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 
   justify-content: space-evenly;
   align-items: center;
   width: 100vw;
-  height: 50vh;
+  height: 45px;
   font-family: 'Comfortaa', sans-serif;
   text-decoration: none;
 }
@@ -42,9 +38,10 @@ background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 
 h1 {
   text-align: center;
   padding-top: 0px;
+  padding-bottom: 0px;
   font-family: 'Comfortaa', sans-serif;
   font-weight: bold;
-  font-size: 65px;
+  font-size: 500px;
 }
 @media (max-with: 1140px){
   .contenedor-seccion{
