Se agrego la vista de productos para gatos, se agregaron algunos middlwares

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,7 +15,7 @@
 </header>  
   
   <div id="form">
-    <form action="/signup" method="POST" class="formSignup">
+    <form action="/auth/signup" method="POST" class="formSignup">
         <h2>Sign Up</h2>
         <section>
             <legend><span class="number">1</span>Your basic info</legend>
