--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -17,10 +17,10 @@
      <h2>Log In</h2>
        <section>
           <label for="mail">Email:</label>
-          <input type="email" id="mail" name="user_email">
+          <input type="email" id="mail" name="email">
           
           <label for="password">Password:</label>
-          <input type="password" id="password" name="user_password">
+          <input type="password" id="password" name="password">
         </section>
 
     <button type="submit">Log In</button>
