Se esta haciendo el crud para los productos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,7 +77,7 @@
               {{/if}}
 
               {{#if userInSession}}
-              <a href="/profile/{{userInSession._id}}">
+              <a href="/user/profile/{{userInSession._id}}">
                 <img src="{{userInSession.photo}}" width="30" height="30"/>
                 <strong>{{userInSession.name}}</strong>
               </a>
